[package]
name = "antugrow"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "4.0.0"
blake2 = { version = "0.11.0-pre.3" }
uint = { version = "0.9.3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[patch.crates-io]
parity-secp256k1 = { git = 'https://github.com/paritytech/rust-secp256k1.git' }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = ["sandbox-rs"]